add temporary under construction menu, disabled routing

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; margin-top: 5%">
+    <img src="./assets/img/noot-best-builder.jpg" style="max-width: 910px; max-height: 910px">
+    <span style="font-size: 30px">under construction</span>
+  </div>
 </body>
 </html>
