--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body style="background-color: #121212; color: #eee">
+<body class="palette">
   <app-root></app-root>
 </body>
 </html>
